--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <div class="logo-side"><img src="img/cedia.jpg"></div>
           </div>
           <div class="col-lg-8 col-xs-12">
-            <div class="logo"><img src="img/addlogo.png"></div>
+            <div class="logo" ><img class="img-responsive" src="img/addlogo.png"></div>
           </div>
       </div>
     </div>
