--- a/index.html
+++ b/index.html
@@ -22,16 +22,16 @@
 
     <div class="container-fluid">
       <div class="row">
-          <div class="col-lg-4 hidden-md hidden-sm hidden-xs">
+          <div class="col-lg-1 hidden-md hidden-sm hidden-xs">
             <div class="logo-side"><img src="img/cedia.jpg"></div>
           </div>
-          <div class="col-lg-8 col-xs-12">
+          <div class="col-lg-6 col-lg-offset-1 col-xs-12">
             <div class="logo" ><img class="img-responsive" src="img/addlogo.png"></div>
           </div>
       </div>
     </div>
     <nav class="navbar navbar-inverted">
-      <div class="container-fluid">
+      <div class="container">
 
         <ul class="nav navbar-nav">
           <il><a class="active" class="bar" href="#">Home</a></il>
@@ -47,9 +47,9 @@
   </head>
   <body>
 
-  	<div class="container-fluid">
+  	<div class="container">
 	<div class="row">
-	<div class="col-lg-12">
+	<div class="col-lg-offset-3 col-lg-6 col-lg-offset-3">
 	<div class="bodytitle">
 	
 		<h2>Welcome to Audio Digital Design Inc.!</h2>
@@ -62,7 +62,7 @@
 
       <div class="container"> 
         <div class="row">
-        <div class="col-lg-11 col-lg-offset-1">
+        <div class="col-lg-offset-3 col-lg-6 col-lg-offset-3">
         <div id="myCarousel" class="carousel slide" data-ride="carousel">
         <ol class="carousel-indicators">
           <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
