--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
 
     <div class="container-fluid">
       <div class="row">
-          <div class="col-lg-1 hidden-md hidden-sm hidden-xs">
+          <div class="col-lg-2 hidden-md hidden-sm hidden-xs">
             <div class="logo-side"><img src="img/cedia.jpg"></div>
           </div>
           <div class="col-lg-6 col-lg-offset-1 col-xs-12">
-            <div class="logo" ><img class="img-responsive" src="img/addlogo.png"></div>
+            <div class="logo" ><a href="index.html"><img class="img-responsive" src="img/addlogo.png"></div></a>
           </div>
       </div>
     </div>
@@ -34,7 +34,7 @@
       <div class="container">
 
         <ul class="nav navbar-nav">
-          <il><a class="active" class="bar" href="#">Home</a></il>
+          <il><a href="index.html" class="active" class="bar" href="#">Home</a></il>
           <il><a class="bar" href="#">Computer Services</a></il>
           <il><a class="bar" href="#">Commerical and Retail</a></il>
           <il><a class="bar" href="#">Home Automation</a></il>
@@ -49,7 +49,7 @@
 
   	<div class="container">
 	<div class="row">
-	<div class="col-lg-offset-3 col-lg-6 col-lg-offset-3">
+	<div class=" col-lg-12">
 	<div class="bodytitle">
 	
 		<h2>Welcome to Audio Digital Design Inc.!</h2>
@@ -62,9 +62,9 @@
 
       <div class="container"> 
         <div class="row">
-        <div class="col-lg-offset-3 col-lg-6 col-lg-offset-3">
+        <div class="col-lg-offset-2 col-lg-8 col-lg-offset-2 " >
         <div id="myCarousel" class="carousel slide" data-ride="carousel">
-        <ol class="carousel-indicators">
+        <ol class="carousel-indicators hidden-sm hidden-xs">
           <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
           <li data-target="#myCarousel" data-slide-to="1"></li>
           <li data-target="#myCarousel" data-slide-to="2"></li>
@@ -182,8 +182,16 @@
 	<div class="container">
 		<div class="row">
 			<div class="bodytext">
-				<p>Audio Digital Design Inc. is a New York and Connecticut based audio visual and computer systems company, specializing in audio visual equipment, computer services, design and installation for homes and corporate, commercial and educational environments. With  over 25 years experience in the audio visual and computer systems industry, we provide expert knowledge and understanding as well as first class service. In an industry that is constantly changing, Audio Digital Design Inc. is committed to bringing you the latest audio visual technologies at competitive prices.</p>
-	
+				<p><strong>Audio Digital Design Inc.</strong> is a New York and Connecticut based audio visual and computer systems company, specializing in audio visual equipment, computer services, design and installation for homes and corporate, commercial and educational environments. With  over 25 years experience in the audio visual and computer systems industry, we provide expert knowledge and understanding as well as first class service. In an industry that is constantly changing, <strong>Audio Digital Design Inc.</strong> is committed to bringing you the latest audio visual technologies at competitive prices.</p>
+
+				<p><br>For addition information, you can email me here:<br>
+				<a href="mailto:Anthony.Ciervo@gmail.com"><button type="button" class="btn btn-default">Contact me here</button></p></a>
+
+
+	</div>
+	</div>
+	</div>
+
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="jquery/dist/jquery.min.js"></script>
