--- a/index.html
+++ b/index.html
@@ -46,7 +46,9 @@
     
   </head>
   <body>
-
+  <div class="container">
+	<div class="wholebody">
+  	
   	<div class="container">
 	<div class="row">
 	<div class=" col-lg-12">
@@ -183,14 +185,45 @@
 		<div class="row">
 			<div class="bodytext">
 				<p><strong>Audio Digital Design Inc.</strong> is a New York and Connecticut based audio visual and computer systems company, specializing in audio visual equipment, computer services, design and installation for homes and corporate, commercial and educational environments. With  over 25 years experience in the audio visual and computer systems industry, we provide expert knowledge and understanding as well as first class service. In an industry that is constantly changing, <strong>Audio Digital Design Inc.</strong> is committed to bringing you the latest audio visual technologies at competitive prices.</p>
-
-				<p><br>For addition information, you can email me here:<br>
-				<a href="mailto:Anthony.Ciervo@gmail.com"><button type="button" class="btn btn-default">Contact me here</button></p></a>
-
-
-	</div>
-	</div>
-	</div>
+				<p><br><strong>Here are some of the things we do:</strong></p>
+				</div>
+				</div>
+				<div class="row">
+				<div class="col-lg-4">
+				<div class="listofservices">
+				<ul>
+					<li>Home Theater and Media Room installation and service</li>
+					<li>Smart Home Systems W/iPad and iPhone Integration</li>
+					<li>Plasma, LED, LCD TV Installation</li>
+					<li>Projectors, Screens and Custom Lifters</li>
+					<li>All-in-one Universal Remote controls</li>
+					<li>SONOS Wireless Multi-room audio systems</li>
+					<li>Multi-room audio &amp; video</li>
+					<li>Lighting Control/Motorized Shade Control</li>
+					<li>Speakers &amp; custom sound design</li>
+					<li>Security &amp; CCTV systems</li>
+					<li>Home theater Furniture</li>
+					<li>Background music systems</li>
+					<li>Wireless Home Automation</li>
+					<li>HVAC Control</li>
+					<li>Computer/Laptop repair</li>
+					<li>Computer/Network wiring</li>
+				</ul>
+				</div>
+				</div>
+				<div class="col-lg-8">
+					<img class="img-responsive" src="img/samsung.jpg">
+				</div>
+				</div>
+				<div class="row">
+				<div class="bodytext">
+				<p><br>For addition information, you can email me here:<br></p>
+				<a href="mailto:Anthony.Ciervo@gmail.com"><button type="button" class="btn btn-default">Contact me here</button></a>
+				</div>
+				</div>
+				</div>
+				</div>
+				
 
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
