--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
 				</div>
 				</div>
 				<div class="col-lg-8">
-					<img class="img-responsive" src="img/samsung.jpg">
+					<img class="img-responsive" src="img/samsung.JPG">
 				</div>
 				</div>
 				<div class="row">
